tests/snapshots/cli__reference_files@scanning__numbers.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/scanning/numbers.lox
---
status: 0
stdout:
  - "123"
stderr: []
