tests/snapshots/cli__reference_files@scanning__strings.lox.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/scanning/strings.lox
---
status: 0
stdout:
  - ""
stderr: []
